--- a/source/layout.erb
+++ b/source/layout.erb
@@ -1,15 +1,39 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/div/html4/strict.dtd">
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <%= stylesheet_link_tag "site.css" %>
-    <%= yield_content :head %>
-  </head>
-  
-  <body class="<%= page_classes %>">
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+
+  <%= stylesheet_link_tag "site.css" %>
+  <%= yield_content :head %>
+
+  <title>Bagel Tech Mac</title>
+
+  <!-- Common App API -->
+  <script type='text/javascript' language='javascript' src='$MANAGER_WIDGET/Common//API/Widget.js'></script>
+  <script type='text/javascript' language='javascript' src='$MANAGER_WIDGET/Common//API/TVKeyValue.js'></script>
+
+  <!-- App code -->
+  <script language="javascript" type="text/javascript" src="Javascript/Main.js"></script>
+  <script language="javascript" type="text/javascript" src="Javascript/Server.js"></script>
+  <script language="javascript" type="text/javascript" src="Javascript/Data.js"></script>
+  <script language="javascript" type="text/javascript" src="Javascript/Player.js"></script>
+  <script language="javascript" type="text/javascript" src="Javascript/Display.js"></script>
+  <script language="javascript" type="text/javascript" src="Javascript/Audio.js"></script>
+
+  <!-- Style sheets -->
+  <link rel="stylesheet" href="CSS/Main.css" type="text/css">
+
+  <!-- Plugins -->
+  <object id="pluginPlayer" classid="clsid:SAMSUNG-INFOLINK-PLAYER" style="border:none; width:0px;height:0px;"></object>
+  <object id="pluginAudio" classid="clsid:SAMSUNG-INFOLINK-AUDIO" style="border:none; width:0px;height:0px;"></object>
+  <object id="pluginTVMW" classid="clsid:SAMSUNG-INFOLINK-TVMW" style="border:none; width:0px;height:0px;"></object>
+
+</head>
+
+<body onload="Main.onLoad();" style="height: 540px; overflow:hidden; margin: 0px;" onunload="Main.onUnload();" class="<%= page_classes %>">
 
     <div id="main" role="main">
       <%= yield %>
