--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+    <title>Bagel Tech Mac</title>
+<% end%>
+
 	    <!-- Dummy anchor as focus for key events -->
         <a href='javascript:void(0);' id='anchor' onkeydown='Main.keyDown();'></a>
         <!-- Layout begins -->
