--- a/source/Javascript/Server.js.erb
+++ b/source/Javascript/Server.js.erb
@@ -4,7 +4,7 @@ var Server =
     dataReceivedCallback : null,
     
     XHRObj : null,
-    url : "http://localhost/scrap/bttv/samples/britishtechmac_rss.xml.php"
+    url : '<%= data.config.rss_feed_url %>'
 }
 
 Server.init = function()
