make config.xml dynamic aka .erb

--- a/source/config.xml.erb
+++ b/source/config.xml.erb
@@ -1,3 +1,6 @@
+---
+layout: none
+---
 <?xml version="1.0" encoding="UTF-8"?>
 <widget>
     <previewjs></previewjs>
@@ -25,7 +28,7 @@
     <width>960</width>
     <height>540</height>
     <author>
-        <name>British Tech Mac</name>
+        <name><%= data.config.page_title %></name>
         <email>bageltechnews@gmail.com</email>
         <link>http://www.bageltechnews.com/?cat=31</link>
         <organization>Bagel Tech News</organization>
