parameterise more of config.xml

--- a/source/config.xml.erb
+++ b/source/config.xml.erb
@@ -12,10 +12,10 @@ layout: none
     <BigThumbIcon>Images/icon/Tutorial_Video_115.png</BigThumbIcon>
     <ListIcon>Images/icon/Tutorial_Video_85.png</ListIcon>
     <BigListIcon>Images/icon/Tutorial_Video_95.png</BigListIcon>
-  
-    <ver>2.2</ver>
+    <ver>1.0</ver>
     <mgrver></mgrver>
     <fullwidget>y</fullwidget>
+    <category>Lifestyle</category>
 	<movie>y</movie>
     <srcctl>y</srcctl>
     <ticker>n</ticker>
@@ -23,14 +23,14 @@ layout: none
     <audiomute>n</audiomute>
     <videomute>n</videomute>
     <dcont>y</dcont>
-    <widgetname>VideoTutorial</widgetname>
-    <description></description>
+    <widgetname><%=  data.config.widgetname %></widgetname>
+    <description><%=  data.config.description %></description>
     <width>960</width>
     <height>540</height>
     <author>
         <name><%= data.config.page_title %></name>
-        <email>bageltechnews@gmail.com</email>
-        <link>http://www.bageltechnews.com/?cat=31</link>
-        <organization>Bagel Tech News</organization>
+        <email>britishtechnews@gmail.com</email>
+        <link>http://www.britishtechnetwork.com/</link>
+        <organization>British Tech TV</organization>
     </author>
 </widget>
