use correct icons

--- a/source/config.xml.erb
+++ b/source/config.xml.erb
@@ -8,10 +8,10 @@ layout: none
     <cpname></cpname>
     <cplogo></cplogo>
     <cpauthjs></cpauthjs>
-      <ThumbIcon>Images/icon/Tutorial_Video_106.png</ThumbIcon>
-    <BigThumbIcon>Images/icon/Tutorial_Video_115.png</BigThumbIcon>
-    <ListIcon>Images/icon/Tutorial_Video_85.png</ListIcon>
-    <BigListIcon>Images/icon/Tutorial_Video_95.png</BigListIcon>
+      <ThumbIcon>Images/icon/<%= data.config.icon_dir %>/106.png</ThumbIcon>
+    <BigThumbIcon>Images/icon/<%= data.config.icon_dir %>/115.png</BigThumbIcon>
+    <ListIcon>Images/icon/<%= data.config.icon_dir %>/85.png</ListIcon>
+    <BigListIcon>Images/icon/<%= data.config.icon_dir %>/95.png</BigListIcon>
     <ver>1.0</ver>
     <mgrver></mgrver>
     <fullwidget>y</fullwidget>
