updated docs, tidied config generation

--- a/source/config.xml.erb
+++ b/source/config.xml.erb
@@ -4,7 +4,6 @@ layout: none
 <?xml version="1.0" encoding="UTF-8"?>
 <widget>
     <previewjs></previewjs>
-    <type>user</type>
     <cpname></cpname>
     <cplogo></cplogo>
     <cpauthjs></cpauthjs>
@@ -12,10 +11,10 @@ layout: none
     <BigThumbIcon>Images/icon/<%= data.config.icon_dir %>/115.png</BigThumbIcon>
     <ListIcon>Images/icon/<%= data.config.icon_dir %>/85.png</ListIcon>
     <BigListIcon>Images/icon/<%= data.config.icon_dir %>/95.png</BigListIcon>
-    <ver>1.0</ver>
+    <ver><%=  data.config.ver %></ver>
     <mgrver></mgrver>
     <fullwidget>y</fullwidget>
-    <category>Lifestyle</category>
+    <category>lifestyle</category>
 	<movie>y</movie>
     <srcctl>y</srcctl>
     <ticker>n</ticker>
