--- a/source/layout.erb
+++ b/source/layout.erb
@@ -12,6 +12,7 @@
   <!-- Common App API -->
   <script type='text/javascript' language='javascript' src='$MANAGER_WIDGET/Common//API/Widget.js'></script>
   <script type='text/javascript' language='javascript' src='$MANAGER_WIDGET/Common//API/TVKeyValue.js'></script>
+  <script type='text/javascript' language='javascript' src='$MANAGER_WIDGET/Common//API/Plugin.js'></script>
 
   <!-- App code -->
   <script language="javascript" type="text/javascript" src="Javascript/Main.js"></script>
@@ -28,7 +29,7 @@
   <object id="pluginPlayer" classid="clsid:SAMSUNG-INFOLINK-PLAYER" style="border:none; width:0px;height:0px;"></object>
   <object id="pluginAudio" classid="clsid:SAMSUNG-INFOLINK-AUDIO" style="border:none; width:0px;height:0px;"></object>
   <object id="pluginTVMW" classid="clsid:SAMSUNG-INFOLINK-TVMW" style="border:none; width:0px;height:0px;"></object>
-
+  <object id='pluginObjectNNavi' border=0 classid='clsid:SAMSUNG-INFOLINK-NNAVI' style='opacity:0.0;background-color:#000000;width:0px;height:0px;'></object>
 </head>
 
 <body onload="Main.onLoad();" style="height: 540px; overflow:hidden; margin: 0px;" onunload="Main.onUnload();" class="<%= page_classes %>">
