--- a/source/layout.erb
+++ b/source/layout.erb
@@ -30,6 +30,7 @@
   <object id="pluginAudio" classid="clsid:SAMSUNG-INFOLINK-AUDIO" style="border:none; width:0px;height:0px;"></object>
   <object id="pluginTVMW" classid="clsid:SAMSUNG-INFOLINK-TVMW" style="border:none; width:0px;height:0px;"></object>
   <object id='pluginObjectNNavi' border=0 classid='clsid:SAMSUNG-INFOLINK-NNAVI' style='opacity:0.0;background-color:#000000;width:0px;height:0px;'></object>
+  <object id='pluginNetwork' border=0 classid='clsid:SAMSUNG-INFOLINK-NETWORK' style='opacity:0.0;background-color:#000000;width:0px;height:0px;'></object>
 </head>
 
 <body onload="Main.onLoad();" style="height: 540px; overflow:hidden; margin: 0px;" onunload="Main.onUnload();" class="<%= page_classes %>">
